@@ -1,5 +1,11 @@
 2012-12-22 Paulo Andrade <pcpa@gnu.org>
 
+	* lib/jit_ppc-cpu.c, lib/jit_ppc.c: Implement logic for
+	jit_htonr for big endian, so that ppc (big endian) pass the
+	new clobber.tst test case.
+
+2012-12-22 Paulo Andrade <pcpa@gnu.org>
+
 	* lib/jit_arm.c: Correct use of wrong argument offset
 	variable in armv7l or float/double argument for varargs
 	function in armv7hl.
